# ocm-indicator

./: readme.txt
doc/: customize.txt  ocm-indicator_hardware.vsdx  ocm-indicator_protocol.txt  ps2_device_timing.vsdx
doc/waveform/: setting.kvset
firmware/: .gitignore  CMakeLists.txt
firmware/host_cdc_msc_hid/: msc_app.c
firmware/sx2_indicator/: CMakeLists.txt  main.cpp  ps2dev_driver.cpp  ps2dev_driver.h  tft_driver.cpp  tft_driver.h  u2p.cpp  u2p.h  usb_host_driver.c  usb_host_driver.h
firmware/sx2_indicator/resource/: grp_font.h  grp_indicator.h  grp_led.h  grp_msx.h  grp_red_led.h
firmware/usb_gamepad_bridge_for_msx/: CMakeLists.txt  usb_gamepad_bridge_for_msx.c
firmware/usb_host_test/: CMakeLists.txt  tusb_config.h  usb_host_test.c
images/: background.cpp  convert.bat  grp_indicator.afphoto  grp_indicator.h  grp_led.afphoto  grp_led.h  grp_mouse.afphoto  grp_red_led.afphoto  grp_red_led.h  grp_small_led.afphoto  grp_small_led.h  image_converter.py  indicator.afphoto  msx.cpp
images/old_design/: grp_background.h  grp_led.afphoto  grp_mouse.h  grp_red_led.afphoto  mouse.afdesign
